# ollama-rag-langchain

./: .gitignore  INSTALL.md  README.md  TODO.md  env_example  habr.py  main.py  main2.py  main3.py  pyproject.toml  requirements.txt  start.py
.forgejo/: config.yml
.forgejo/issue_template/: bug_report.md  bug_report.yml  documentation.yml  feature_request.yml
django/rag_app/: rag_engine.py  urls.py  view.py
docs/: Prompt Engineering.txt  dict.txt  Темы обращений из справочника-.csv
src/: config.py  main.py
src/api/routes/: __init__.py  frontend.py  health.py  query.py
src/core/: __init__.py  embeddings.py  llm.py  vectorstore.py
src/schemas/: __init__.py  query.py
src/services/: __init__.py  rag_service.py
static/css/: main.css
templates/: base.html  index.html
templates/partials/: __init__.py  answer.html
tests/: test_query.py
